--- a/3_praktinis/index.html
+++ b/3_praktinis/index.html
@@ -14,13 +14,13 @@
 </head>
 <body>
    <iframe 
-        src="https://vu-lt.maps.arcgis.com/apps/instant/reporter/index.html?appid=a5b3574200a84cae866e4d8822e5d8dc" 
-        width="100%" 
-        height="100%" 
-        frameborder="0" 
-        style="border:0;" 
-        allowfullscreen>
-        „iFrames“ šiame puslapyje nepalaikoma.
+    width="100%" 
+    height="100%" 
+    frameborder="0" 
+    scrolling="no" 
+    marginheight="0" 
+    marginwidth="0" 
+    src="https://vu-lt.maps.arcgis.com/apps/instant/reporter/index.html?appid=a5b3574200a84cae866e4d8822e5d8dc" 
     </iframe> 
 </body>
 </html>
