Istaisiau kodavimo klaidas

--- a/3_praktinis/index.html
+++ b/3_praktinis/index.html
@@ -13,7 +13,7 @@
     </style>
 </head>
 <body>
-   <iframe 
+ <iframe 
     width="100%" 
     height="100%" 
     frameborder="0" 
@@ -21,6 +21,6 @@
     marginheight="0" 
     marginwidth="0" 
     src="https://vu-lt.maps.arcgis.com/apps/instant/reporter/index.html?appid=a5b3574200a84cae866e4d8822e5d8dc" 
-    </iframe> 
+ ></iframe>
 </body>
 </html>
