--- a/2_praktinis/index.html
+++ b/2_praktinis/index.html
@@ -21,7 +21,7 @@
     marginheight="0" 
     marginwidth="0" 
     src="https://www.geoportal.lt/map/?mode=openMap#portalAction=openSavedMap&savedMapId=84926">
-  </iframe>
+  ></iframe>
 
 </body>
 </html>
