--- a/index.html
+++ b/index.html
@@ -36,15 +36,11 @@
     <table id="top_part"> <tr>
             <td id="about" class="animated slideInLeft" style="animation-delay:2s;">
                 <h1>Sveiki atvykę į Lauros Žemėlapių Portalą!</h1>
-                <p>Esu **Laura Petkevič**, Vilniaus universiteto, Kartografijos ir GIS III kurso studentė. Ši svetainė parengta kaip 4-oji praktinė užduotis studijų dalyko "Interneto technologijos ir GIS". Jos tikslas – pristatyti visus per semestrą atliktus praktinius darbus, apimančius interaktyvių žemėlapių kūrimą ir duomenų vizualizavimą, taikant pažangias technologijas.</p>
-                <p>Čia rasite interaktyvius žemėlapius, sukurtus naudojant **Kepler.gl**, **Geoportal.lt** ir **ArcGIS Online** platformas, demonstruojančios skirtingas geografinių duomenų analizės ir vizualizavimo galimybes. Kviečiu susipažinti su mano projektais, kurie atspindi įgytas žinias ir įgūdžius.</p>
+                <p>Esu Laura Petkevič, Vilniaus universiteto, Kartografijos ir GIS III kurso studentė. Ši svetainė parengta kaip 4-oji praktinė užduotis studijų dalyko "Interneto technologijos ir GIS". Jos tikslas – pristatyti visus per semestrą atliktus praktinius darbus, apimančius interaktyvių žemėlapių kūrimą ir duomenų vizualizavimą, taikant pažangias technologijas.</p>
+                <p>Čia rasite interaktyvius žemėlapius, sukurtus naudojant Kepler.gl, Geoportal.lt ir ArcGIS Online platformas, demonstruojančios skirtingas geografinių duomenų analizės ir vizualizavimo galimybes. Kviečiu susipažinti su mano projektais, kurie atspindi įgytas žinias ir įgūdžius.</p>
 
                 <table>
                     <tr>
-                        <td class="animated zoomIn" style="animation-delay:2.2s;"><a class="social" href="https://www.facebook.com/yourprofile" target="_blank"><i class="fab fa-facebook"></i></a></td>
-                        <td class="animated zoomIn" style="animation-delay:2.4s;"><a class="social" href="https://twitter.com/yourprofile" target="_blank"><i class="fab fa-twitter"></i></a></td>
-                        <td class="animated zoomIn" style="animation-delay:2.6s;"><a class="social" href="https://www.instagram.com/yourprofile" target="_blank"><i class="fab fa-instagram"></i></a></td>
-                        <td class="animated zoomIn" style="animation-delay:2.8s;"><a class="social" href="https://www.linkedin.com/in/yourprofile" target="_blank"><i class="fab fa-linkedin"></i></a></td>
                         <td class="animated zoomIn" style="animation-delay:3.0s;"><a class="social" href="https://github.com/LAURAPETGEO" target="_blank"><i class="fab fa-github"></i></a></td>
                     </tr>
                 </table>
@@ -58,16 +54,16 @@
             <h1>Mano Darbai Apžvalga</h1>
             <p>Šiame skyriuje rasite mano atliktų žemėlapių projektų vizualinę apžvalgą. Kiekviena nuotrauka yra ekrano kopija arba vizualizacija, susijusi su konkrečiu projektu. Paspauskite ant nuotraukos, kad ją padidintumėte ir pamatytumėte detaliau.</p>
             <div id="photos">
-                <img onclick="magnify($(this).attr('src'))" src="images/preview_kepler_tornadoes.png" alt="Kepler.gl tornadų žemėlapio peržiūra">
-                <img onclick="magnify($(this).attr('src'))" src="images/preview_earthquakes.png" alt="Žemės drebėjimų žemėlapio peržiūra">
-                <img onclick="magnify($(this).attr('src'))" src="images/preview_tornado_intensity.png" alt="Tornadų intensyvumo žemėlapio peržiūra">
-                <img onclick="magnify($(this).attr('src'))" src="images/preview_traffic_accidents.png" alt="Eismo įvykių žemėlapio peržiūra">
-                <img onclick="magnify($(this).attr('src'))" src="images/preview_pollution_suggestions.png" alt="Taršos pasiūlymų žemėlapio peržiūra">
-                </div>
+                <img onclick="magnify($(this).attr('src'))" src="images/map_1_preview.png" alt="Kepler.gl tornadų ir prieglaudų žemėlapio peržiūra">
+                <img onclick="magnify($(this).attr('src'))" src="images/map_2_preview.png" alt="Žemės drebėjimų 3D žemėlapio peržiūra">
+                <img onclick="magnify($(this).attr('src'))" src="images/map_3_preview.png" alt="Tornadų intensyvumo gardelės žemėlapio peržiūra">
+                <img onclick="magnify($(this).attr('src'))" src="images/map_4_preview.png" alt="Eismo įvykių analizės žemėlapio peržiūra">
+                <img onclick="magnify($(this).attr('src'))" src="images/map_5_preview.png" alt="Aplinkos švaros pasiūlymų žemėlapio peržiūra">
+            </div>
         </div>
 
         <div id="bio"> <h1>Apie Mane ir Studijas</h1>
-            <p>Esu Vilniaus universiteto studentė, aistringai besidominti kartografija, geoinformacinėmis sistemomis (GIS) ir interneto technologijų taikymu geografijoje. Studijų metu įgijau teorinių žinių ir praktinių įgūdžių dirbant su įvairiomis geoinformacinėmis platformomis, tokiomis kaip **ArcGIS Pro, QGIS, ArcGIS Online, Geoportal.lt**, ir įrankiais, kaip **Kepler.gl**. Taip pat mokausi ir taikau programavimo kalbas bei žiniatinklio kūrimo technologijas, skirtas interaktyvių žemėlapių ir erdvinės duomenų vizualizacijų kūrimui.</p>
+            <p>Esu Vilniaus universiteto studentė, aistringai besidominti kartografija, geoinformacinėmis sistemomis (GIS) ir interneto technologijų taikymu geografijoje. Studijų metu įgijau teorinių žinių ir praktinių įgūdžių dirbant su įvairiomis geoinformacinėmis platformomis, tokiomis kaip ArcGIS Pro, QGIS, ArcGIS Online, Geoportal.lt, ir įrankiais, kaip Kepler.gl. Taip pat mokausi ir taikau programavimo kalbas bei žiniatinklio kūrimo technologijas, skirtas interaktyvių žemėlapių ir erdvinės duomenų vizualizacijų kūrimui.</p>
             <p>Ši svetainė yra mano asmeninis portfolio, atspindintis mano mokymosi kelionę, praktinius gebėjimus ir gebėjimą integruoti skirtingas GIS technologijas. Tikiuosi, kad mano darbai padės jums geriau suprasti geografinių duomenų svarbą ir jų panaudojimo galimybes įvairiose srityse.</p>
         </div>
     </div>
@@ -78,23 +74,25 @@
 
         <div class="map-container">
             <h2>1. Kepler.gl Analitinis Žemėlapis: Tornadų Trajektorijos ir Evakuacijos Prieglaudos JAV</h2>
-            <p>Šis žemėlapis sukurtas naudojant **Kepler.gl** platformą. Jame analizuojami ir vizualizuojami **JAV tornadų trajektorijos (nuo 1950 iki 2021 m.)** bei **evakuacijos pagalbos prieglaudos JAV**. Tornadų sluoksnis rodo jų intensyvumą (F-skalė), žuvusiųjų ir sužeistųjų skaičių. Prieglaudų sluoksnyje pateikiama informacija apie pavadinimą, adresą, miestą, telefono numerį ir veikimo statusą. Naudotojai gali filtruoti tornadus pagal norimą dešimties metų periodą, siekiant pamatyti, kaip šalis prisitaiko prie šių gamtos reiškinių dažnumo ir kaip pagalbos infrastruktūra yra išdėstyta.</p>
+            <p>Šis žemėlapis sukurtas naudojant Kepler.gl platformą. Jame analizuojami ir vizualizuojami JAV tornadų trajektorijos (nuo 1950 iki 2021 m.) bei evakuacijos pagalbos prieglaudos JAV. Tornadų sluoksnis rodo jų intensyvumą (F-skalė), žuvusiųjų ir sužeistųjų skaičių. Prieglaudų sluoksnyje pateikiama informacija apie pavadinimą, adresą, miestą, telefono numerį ir veikimo statusą. Naudotojai gali filtruoti tornadus pagal norimą dešimties metų periodą, siekiant pamatyti, kaip šalis prisitaiko prie šių gamtos reiškinių dažnumo ir kaip pagalbos infrastruktūra yra išdėstyta.</p>
             <iframe src="1_praktinis/map_1.html" width="100%" height="600px" frameborder="0" allowfullscreen></iframe>
         </div>
 
         <div class="map-container">
-            <h2>2. Teminiai Geoportal Žemėlapiai: Žemės Drebėjimai ir Tornadų Intensyvumas</h2>
-            <p>Šie žemėlapiai yra parengti kaip teminės vizualizacijos. Pirmasis žemėlapis vaizduoja **istorinius žemės drebėjimus Kalifornijoje (Gardelė)**. Duomenys atvaizduojami 3D formatu pagal žemės drebėjimų magnitudę, o taip pat integruota erdvinė gardelė pagal magnitudes ir laiko skalė, leidžianti stebėti drebėjimų dinamiką.</p>
+            <h2>2. Kepler.gl Žemėlapiai: Istoriniai Žemės Drebėjimai ir Tornadų Intensyvumas</h2>
+            <p>Šie žemėlapiai yra parengti kaip teminės vizualizacijos, naudojant Kepler.gl platformą.</p>
+            <h3>Istoriniai žemės drebėjimai Kalifornijoje (Gardelės vaizdavimas)</h3>
+            <p>Pirmasis žemėlapis vaizduoja istorinius žemės drebėjimus Kalifornijoje (Gardelė). Duomenys atvaizduojami 3D formatu pagal žemės drebėjimų magnitudę, o taip pat integruota erdvinė gardelė pagal magnitudę ir laiko skalę, leidžiančią stebėti drebėjimų dinamiką.</p>
             <iframe src="1_praktinis/map_2.html" width="100%" height="600px" frameborder="0" allowfullscreen></iframe>
 
             <h3>Tornadų Intensyvumas (Gardelės vaizdavimas)</h3>
-            <p>Antrasis žemėlapis – **"Tornadų intensyvumas nuo 1950 iki 2021 m."**, atvaizduojamas gardelėmis pagal tornadų vienetus. Ši vizualizacija leidžia lengvai nustatyti, kuriose vietose ir kokiu laikotarpiu buvo didžiausias tornadų skaičius. Naudotojai gali pasirinkti dominatį laikotarpį per filtrus.</p>
+            <p>Antrasis žemėlapis – "Tornadų intensyvumas nuo 1950 iki 2021 m.", atvaizduojamas gardelėmis pagal tornadų vienetus. Ši vizualizacija leidžia lengvai nustatyti, kuriose vietose ir kokiu laikotarpiu buvo didžiausias tornadų skaičius. Naudotojai gali pasirinkti dominatį laikotarpį per filtrus.</p>
             <iframe src="1_praktinis/map_3.html" width="100%" height="600px" frameborder="0" allowfullscreen></iframe>
         </div>
 
         <div class="map-container">
-            <h2>3. ArcGIS Online Žemėlapis: Eismo Įvykių Analizė Prie Mokyklų Lietuvos Savivaldybėse (2023 m.)</h2>
-            <p>Šis interaktyvus žemėlapis pateikia **2023 m. eismo įvykių analizę Lietuvos teritorijoje**, ypatingą dėmesį skiriant švietimo įstaigų aplinkai. Žemėlapis skirtas analizuoti eismo saugą šalia mokyklų, identifikuoti rizikingas teritorijas ir remtis sprendimų priėmime švietimo, kelių infrastruktūros bei viešojo saugumo srityse.</p>
+            <h2>3. Geoportal.lt Žemėlapis: Eismo Įvykių Analizė Prie Mokyklų Lietuvos Savivaldybėse (2023 m.)</h2>
+            <p>Šis interaktyvus žemėlapis pateikia 2023 m. eismo įvykių analizę Lietuvos teritorijoje, ypatingą dėmesį skiriant švietimo įstaigų aplinkai. Žemėlapis skirtas analizuoti eismo saugą šalia mokyklų, identifikuoti rizikingas teritorijas ir remtis sprendimų priėmime švietimo, kelių infrastruktūros bei viešojo saugumo srityse.</p>
             <p>Integruoti sluoksniai:</p>
             <ul>
                 <li>2023 m. eismo įvykiai iš Eismo įvykių informacinės sistemos (EĮIS).</li>
@@ -108,12 +106,12 @@
         </div>
 
         <div class="map-container">
-            <h2>4. Interaktyvus Žemėlapis: Gyventojų Pasiūlymai Dėl Aplinkos Švaros</h2>
+            <h2>4. ArcGIS Online Interaktyvus Žemėlapis: Gyventojų Pasiūlymai Dėl Aplinkos Švaros</h2>
             <p>Ši interaktyvi žemėlapio aplikacija skirta gyventojų siūlomų teritorijų švarinimo idėjų peržiūrai ir pateikimui. Vartotojai gali pažymėti užterštas vietas, įkelti duomenis, peržiūrėti kitų įrašus bei analizuoti situaciją pagal objektų tipus ir būsenas. Naudodamiesi aplikacija vartotojai gali:</p>
             <ul>
-                <li>Peržiūrėti jau pažymėtas užterštas vietas ar teritorijas, kurioms reikalinga pagalba.</li>
-                <li>Įvesti naujus pasiūlymus, nurodydami užterštumo tipą, aprašymą, datą.</li>
-                <li>Naudotis žemėlapio funkcijomis – keisti foninius žemėlapius, atlikti paiešką ir pan.</li>
+                <li>Peržiūrėti jau pažymėtas užterštas vietas ar teritorijas, kurioms reikalinga pagalba;</li>
+                <li>Įvesti naujus pasiūlymus, nurodydami užterštumo tipą, aprašymą, datą;</li>
+                <li>Naudotis žemėlapio funkcijomis – keisti foninius žemėlapius, atlikti paiešką ir pan.;</li>
             </ul>
             <p class="small-text">Visi naudotojo pateikti objektai automatiškai įgyja pradinę būseną „Pateiktas“ ir yra matomi tik vidaus peržiūros versijoje. Tik administratoriaus patvirtinti ar analizuojami objektai tampa matomi viešame žemėlapyje.</p>
             <iframe src="3_praktinis/index.html" width="100%" height="600px" frameborder="0" allowfullscreen></iframe>
@@ -122,10 +120,10 @@
 
 
     <div id="footer">
-        Padaryta Žemėje žmogaus: Laura Petkevič <br> Vilniaus Universitetas, Kartografijos ir GIS
+        Autorius : Laura Petkevič <br> Vilniaus Universitetas, Kartografijos ir GIS
         <br> Svetainė parengta kaip 4-oji praktinė užduotis studijų dalyko "Interneto technologijos ir GIS".
         <br> Sukūrimo data: 2025 m. gegužės 30 d.
-        <br> Kontaktai: <a href="mailto:laura.petkevic@chgf.stud.vu.lt">laura.petkevic@chgf.stud.vu.lt</a> | <a href="https://github.com/LAURAPETGEO" target="_blank">laurapetgeo.github.io</a>
+        <br> Kontaktai: <a href="mailto:laura.petkevic@chgf.stud.vu.lt">laura.petkevic@chgf.vu.lt</a> | <a href="https://github.com/LAURAPETGEO" target="_blank">laurapetgeo.github.io</a>
     </div>
 
     <script src="index.js" type="text/javascript"></script>
