--- a/pages/contact.html
+++ b/pages/contact.html
@@ -145,7 +145,7 @@
 
     <div class="contact-info-section">
         <h2>Apie Svetainės Kūrėją</h2>
-        <p>Svetainę sukūrė: **Laura Petkevič**</p>
+        <p>Svetainę sukūrė: Laura Petkevič</p>
         <p>Vilniaus universiteto, Kartografijos ir GIS III kurso studentė.</p>
         <p>Ši svetainė yra studentės atlikta 4-oji praktinė užduotis studijų dalyko "Interneto technologijos ir GIS", skirta pademonstruoti gebėjimus dirbti su HTML, CSS ir integruoti interaktyvius žemėlapius.</p>
         <p>El. paštas: <a href="mailto:laura.petkevic@chgf.stud.vu.lt">laura.petkevic@chgf.stud.vu.lt</a></p>
@@ -170,7 +170,7 @@
     </div>
 
     <div id="footer">
-        Padaryta Žemėje žmogaus: Laura Petkevič <br> Vilniaus Universitetas, Kartografijos ir GIS
+        Autorius : Laura Petkevič <br> Vilniaus Universitetas, Kartografijos ir GIS
         <br> Svetainė parengta kaip 4-oji praktinė užduotis studijų dalyko "Interneto technologijos ir GIS".
         <br> Sukūrimo data: 2025 m. gegužės 30 d.
         <br> Kontaktai: <a href="mailto:laura.petkevic@chgf.stud.vu.lt">laura.petkevic@chgf.stud.vu.lt</a> | <a href="https://github.com/LAURAPETGEO" target="_blank">laurapetgeo.github.io</a>
