maps-section klaidos taisymas

--- a/index.html
+++ b/index.html
@@ -73,22 +73,49 @@
         <p>Žemiau pateikiami interaktyvūs žemėlapiai, sukurti per studijų dalyko "Interneto technologijos ir GIS" praktinius užsiėmimus. Kiekvienas žemėlapis iliustruoja skirtingas duomenų vizualizavimo, analizės ir interaktyvumo galimybes.</p>
 
         <div class="map-container">
-            <h2>1. Kepler.gl Analitinis Žemėlapis: Tornadų Trajektorijos ir Evakuacijos Prieglaudos JAV</h2>
-            <p>Šis žemėlapis sukurtas naudojant Kepler.gl platformą. Jame analizuojami ir vizualizuojami JAV tornadų trajektorijos (nuo 1950 iki 2021 m.) bei evakuacijos pagalbos prieglaudos JAV. Tornadų sluoksnis rodo jų intensyvumą (F-skalė), žuvusiųjų ir sužeistųjų skaičių. Prieglaudų sluoksnyje pateikiama informacija apie pavadinimą, adresą, miestą, telefono numerį ir veikimo statusą. Naudotojai gali filtruoti tornadus pagal norimą dešimties metų periodą, siekiant pamatyti, kaip šalis prisitaiko prie šių gamtos reiškinių dažnumo ir kaip pagalbos infrastruktūra yra išdėstyta.</p>
+            <h2>1. Kepler.gl Žemėlapiai (1-oji praktinė užduotis)</h2>
+            <p>Šie trys žemėlapiai sukurti naudojant Kepler.gl platformą ir sudaro pirmąją praktinę užduotį. Jie demonstruoja skirtingas JAV tornadų ir žemės drebėjimų duomenų vizualizavimo galimybes, įskaitant interaktyvius filtrus ir 3D atvaizdavimą.</p>
+
+            <h3>1.1 Tornadų Trajektorijos ir Evakuacijos Prieglaudos JAV</h3>
+            <p>Šis žemėlapis analizuoja ir vizualizuoja JAV tornadų trajektorijas (nuo 1950 iki 2021 m.) bei evakuacijos pagalbos prieglaudas JAV. Tornadų sluoksnis rodo jų intensyvumą (F-skalė), žuvusiųjų ir sužeistųjų skaičių. Prieglaudų sluoksnyje pateikiama informacija apie pavadinimą, adresą, miestą, telefono numerį ir veikimo statusą. Naudotojai gali filtruoti tornadus pagal norimą dešimties metų periodą, siekiant pamatyti, kaip šalis prisitaiko prie šių gamtos reiškinių dažnumo ir kaip pagalbos infrastruktūra yra išdėstyta.</p>
             <iframe src="1_praktinis/map_1.html" width="100%" height="600px" frameborder="0" allowfullscreen></iframe>
+
+            <h3>1.2 Istoriniai Žemės Drebėjimai Kalifornijoje (Gardelės vaizdavimas)</h3>
+            <p>Šis žemėlapis vaizduoja istorinius žemės drebėjimus Kalifornijoje (Gardelė). Duomenys atvaizduojami 3D formatu pagal žemės drebėjimų magnitudę, o taip pat integruota erdvinė gardelė pagal magnitudę ir laiko skalę, leidžiančią stebėti drebėjimų dinamiką.</p>
+            <iframe src="1_praktinis/map_2.html" width="100%" height="600px" frameborder="0" allowfullscreen></iframe>
+
+            <h3>1.3 Tornadų Intensyvumas (Gardelės vaizdavimas)</h3>
+            <p>Šis žemėlapis – "Tornadų intensyvumas nuo 1950 iki 2021 m.", atvaizduojamas gardelėmis pagal tornadų vienetus. Ši vizualizacija leidžia lengvai nustatyti, kuriose vietose ir kokiu laikotarpiu buvo didžiausias tornadų skaičius. Naudotojai gali pasirinkti dominatį laikotarpį per filtrus.</p>
+            <iframe src="1_praktinis/map_3.html" width="100%" height="600px" frameborder="0" allowfullscreen></iframe>
         </div>
 
         <div class="map-container">
-            <h2>2. Kepler.gl Žemėlapiai: Istoriniai Žemės Drebėjimai ir Tornadų Intensyvumas</h2>
-            <p>Šie žemėlapiai yra parengti kaip teminės vizualizacijos, naudojant Kepler.gl platformą.</p>
-            <h3>Istoriniai žemės drebėjimai Kalifornijoje (Gardelės vaizdavimas)</h3>
-            <p>Pirmasis žemėlapis vaizduoja istorinius žemės drebėjimus Kalifornijoje (Gardelė). Duomenys atvaizduojami 3D formatu pagal žemės drebėjimų magnitudę, o taip pat integruota erdvinė gardelė pagal magnitudę ir laiko skalę, leidžiančią stebėti drebėjimų dinamiką.</p>
-            <iframe src="1_praktinis/map_2.html" width="100%" height="600px" frameborder="0" allowfullscreen></iframe>
-
-            <h3>Tornadų Intensyvumas (Gardelės vaizdavimas)</h3>
-            <p>Antrasis žemėlapis – "Tornadų intensyvumas nuo 1950 iki 2021 m.", atvaizduojamas gardelėmis pagal tornadų vienetus. Ši vizualizacija leidžia lengvai nustatyti, kuriose vietose ir kokiu laikotarpiu buvo didžiausias tornadų skaičius. Naudotojai gali pasirinkti dominatį laikotarpį per filtrus.</p>
-            <iframe src="1_praktinis/map_3.html" width="100%" height="600px" frameborder="0" allowfullscreen></iframe>
+            <h2>2. Geoportal.lt Žemėlapis: Eismo Įvykių Analizė Prie Mokyklų Lietuvos Savivaldybėse (2023 m.)</h2>
+            <p>Šis interaktyvus žemėlapis pateikia 2023 m. eismo įvykių analizę Lietuvos teritorijoje, ypatingą dėmesį skiriant švietimo įstaigų aplinkai. Žemėlapis skirtas analizuoti eismo saugą šalia mokyklų, identifikuoti rizikingas teritorijas ir remtis sprendimų priėmime švietimo, kelių infrastruktūros bei viešojo saugumo srityse.</p>
+            <p>Integruoti sluoksniai:</p>
+            <ul>
+                <li>2023 m. eismo įvykiai iš Eismo įvykių informacinės sistemos (EĮIS).</li>
+                <li>Lietuvos švietimo įstaigos (mokyklos), pateiktos taškiniu formatu.</li>
+                <li>100 m spindulio buferinės zonos aplink mokyklas.</li>
+                <li>Eismo įvykiai, įvykę ≤100 m. atstumu nuo mokyklų.</li>
+                <li>Agreguoti eismo įvykių duomenys savivaldybių lygmeniu (kartograma).</li>
+                <li>Administracinės ribos ir adresų fonas.</li>
+            </ul>
+            <iframe src="2_praktinis/index.html" width="100%" height="600px" frameborder="0" allowfullscreen></iframe>
         </div>
+
+        <div class="map-container">
+            <h2>3. ArcGIS Online Interaktyvus Žemėlapis: Gyventojų Pasiūlymai Dėl Aplinkos Švaros</h2>
+            <p>Ši interaktyvi žemėlapio aplikacija skirta gyventojų siūlomų teritorijų švarinimo idėjų peržiūrai ir pateikimui. Vartotojai gali pažymėti užterštas vietas, įkelti duomenis, peržiūrėti kitų įrašus bei analizuoti situaciją pagal objektų tipus ir būsenas. Naudodamiesi aplikacija vartotojai gali:</p>
+            <ul>
+                <li>Peržiūrėti jau pažymėtas užterštas vietas ar teritorijas, kurioms reikalinga pagalba;</li>
+                <li>Įvesti naujus pasiūlymus, nurodydami užterštumo tipą, aprašymą, datą;</li>
+                <li>Naudotis žemėlapio funkcijomis – keisti foninius žemėlapius, atlikti paiešką ir pan.;</li>
+            </ul>
+            <p class="small-text">Visi naudotojo pateikti objektai automatiškai įgyja pradinę būseną „Pateiktas“ ir yra matomi tik vidaus peržiūros versijoje. Tik administratoriaus patvirtinti ar analizuojami objektai tampa matomi viešame žemėlapyje.</p>
+            <iframe src="3_praktinis/index.html" width="100%" height="600px" frameborder="0" allowfullscreen></iframe>
+        </div>
+    </div>
 
         <div class="map-container">
             <h2>3. Geoportal.lt Žemėlapis: Eismo Įvykių Analizė Prie Mokyklų Lietuvos Savivaldybėse (2023 m.)</h2>
