--- a/index.html
+++ b/index.html
@@ -28,12 +28,14 @@
                 </td>
                 <td id="navigation">
                     <a href="#top_part">Apie</a> <a href="#maps-section">Žemėlapiai</a>
-                    <a href="pages/contact.html">Kontaktai</a> </td>
+                    <a href="pages/contact.html">Kontaktai</a>
+                </td>
             </tr>
         </table>
     </header>
 
-    <table id="top_part"> <tr>
+    <table id="top_part">
+        <tr>
             <td id="about" class="animated slideInLeft" style="animation-delay:2s;">
                 <h1>Sveiki atvykę į Lauros Žemėlapių Portalą!</h1>
                 <p>Esu Laura Petkevič, Vilniaus universiteto, Kartografijos ir GIS III kurso studentė. Ši svetainė parengta kaip 4-oji praktinė užduotis studijų dalyko "Interneto technologijos ir GIS". Jos tikslas – pristatyti visus per semestrą atliktus praktinius darbus, apimančius interaktyvių žemėlapių kūrimą ir duomenų vizualizavimą, taikant pažangias technologijas.</p>
@@ -54,15 +56,16 @@
             <h1>Mano Darbai Apžvalga</h1>
             <p>Šiame skyriuje rasite mano atliktų žemėlapių projektų vizualinę apžvalgą. Kiekviena nuotrauka yra ekrano kopija arba vizualizacija, susijusi su konkrečiu projektu. Paspauskite ant nuotraukos, kad ją padidintumėte ir pamatytumėte detaliau.</p>
             <div id="photos">
-                <img onclick="magnify($(this).attr('src'))" src="images/map_1_preview.png" alt="Kepler.gl tornadų ir prieglaudų žemėlapio peržiūra">
-                <img onclick="magnify($(this).attr('src'))" src="images/map_2_preview.png" alt="Žemės drebėjimų 3D žemėlapio peržiūra">
-                <img onclick="magnify($(this).attr('src'))" src="images/map_3_preview.png" alt="Tornadų intensyvumo gardelės žemėlapio peržiūra">
-                <img onclick="magnify($(this).attr('src'))" src="images/map_4_preview.png" alt="Eismo įvykių analizės žemėlapio peržiūra">
+                <img onclick="magnify(<span class="math-inline">\(this\)\.attr\('src'\)\)" src\="images/map\_1\_preview\.png" alt\="Kepler\.gl tornadų ir prieglaudų žemėlapio peržiūra"\>
+<img onclick\="magnify\(</span>(this).attr('src'))" src="images/map_2_preview.png" alt="Žemės drebėjimų 3D žemėlapio peržiūra">
+                <img onclick="magnify(<span class="math-inline">\(this\)\.attr\('src'\)\)" src\="images/map\_3\_preview\.png" alt\="Tornadų intensyvumo gardelės žemėlapio peržiūra"\>
+<img onclick\="magnify\(</span>(this).attr('src'))" src="images/map_4_preview.png" alt="Eismo įvykių analizės žemėlapio peržiūra">
                 <img onclick="magnify($(this).attr('src'))" src="images/map_5_preview.png" alt="Aplinkos švaros pasiūlymų žemėlapio peržiūra">
             </div>
         </div>
 
-        <div id="bio"> <h1>Apie Mane ir Studijas</h1>
+        <div id="bio">
+            <h1>Apie Mane ir Studijas</h1>
             <p>Esu Vilniaus universiteto studentė, aistringai besidominti kartografija, geoinformacinėmis sistemomis (GIS) ir interneto technologijų taikymu geografijoje. Studijų metu įgijau teorinių žinių ir praktinių įgūdžių dirbant su įvairiomis geoinformacinėmis platformomis, tokiomis kaip ArcGIS Pro, QGIS, ArcGIS Online, Geoportal.lt, ir įrankiais, kaip Kepler.gl. Taip pat mokausi ir taikau programavimo kalbas bei žiniatinklio kūrimo technologijas, skirtas interaktyvių žemėlapių ir erdvinės duomenų vizualizacijų kūrimui.</p>
             <p>Ši svetainė yra mano asmeninis portfolio, atspindintis mano mokymosi kelionę, praktinius gebėjimus ir gebėjimą integruoti skirtingas GIS technologijas. Tikiuosi, kad mano darbai padės jums geriau suprasti geografinių duomenų svarbą ir jų panaudojimo galimybes įvairiose srityse.</p>
         </div>
@@ -113,46 +116,4 @@
                 <li>Naudotis žemėlapio funkcijomis – keisti foninius žemėlapius, atlikti paiešką ir pan.;</li>
             </ul>
             <p class="small-text">Visi naudotojo pateikti objektai automatiškai įgyja pradinę būseną „Pateiktas“ ir yra matomi tik vidaus peržiūros versijoje. Tik administratoriaus patvirtinti ar analizuojami objektai tampa matomi viešame žemėlapyje.</p>
-            <iframe src="3_praktinis/index.html" width="100%" height="600px" frameborder="0" allowfullscreen></iframe>
-        </div>
-    </div>
-
-        <div class="map-container">
-            <h2>3. Geoportal.lt Žemėlapis: Eismo Įvykių Analizė Prie Mokyklų Lietuvos Savivaldybėse (2023 m.)</h2>
-            <p>Šis interaktyvus žemėlapis pateikia 2023 m. eismo įvykių analizę Lietuvos teritorijoje, ypatingą dėmesį skiriant švietimo įstaigų aplinkai. Žemėlapis skirtas analizuoti eismo saugą šalia mokyklų, identifikuoti rizikingas teritorijas ir remtis sprendimų priėmime švietimo, kelių infrastruktūros bei viešojo saugumo srityse.</p>
-            <p>Integruoti sluoksniai:</p>
-            <ul>
-                <li>2023 m. eismo įvykiai iš Eismo įvykių informacinės sistemos (EĮIS).</li>
-                <li>Lietuvos švietimo įstaigos (mokyklos), pateiktos taškiniu formatu.</li>
-                <li>100 m spindulio buferinės zonos aplink mokyklas.</li>
-                <li>Eismo įvykiai, įvykę ≤100 m. atstumu nuo mokyklų.</li>
-                <li>Agreguoti eismo įvykių duomenys savivaldybių lygmeniu (kartograma).</li>
-                <li>Administracinės ribos ir adresų fonas.</li>
-            </ul>
-            <iframe src="2_praktinis/index.html" width="100%" height="600px" frameborder="0" allowfullscreen></iframe>
-        </div>
-
-        <div class="map-container">
-            <h2>4. ArcGIS Online Interaktyvus Žemėlapis: Gyventojų Pasiūlymai Dėl Aplinkos Švaros</h2>
-            <p>Ši interaktyvi žemėlapio aplikacija skirta gyventojų siūlomų teritorijų švarinimo idėjų peržiūrai ir pateikimui. Vartotojai gali pažymėti užterštas vietas, įkelti duomenis, peržiūrėti kitų įrašus bei analizuoti situaciją pagal objektų tipus ir būsenas. Naudodamiesi aplikacija vartotojai gali:</p>
-            <ul>
-                <li>Peržiūrėti jau pažymėtas užterštas vietas ar teritorijas, kurioms reikalinga pagalba;</li>
-                <li>Įvesti naujus pasiūlymus, nurodydami užterštumo tipą, aprašymą, datą;</li>
-                <li>Naudotis žemėlapio funkcijomis – keisti foninius žemėlapius, atlikti paiešką ir pan.;</li>
-            </ul>
-            <p class="small-text">Visi naudotojo pateikti objektai automatiškai įgyja pradinę būseną „Pateiktas“ ir yra matomi tik vidaus peržiūros versijoje. Tik administratoriaus patvirtinti ar analizuojami objektai tampa matomi viešame žemėlapyje.</p>
-            <iframe src="3_praktinis/index.html" width="100%" height="600px" frameborder="0" allowfullscreen></iframe>
-        </div>
-    </div>
-
-
-    <div id="footer">
-        Autorius : Laura Petkevič <br> Vilniaus Universitetas, Kartografijos ir GIS
-        <br> Svetainė parengta kaip 4-oji praktinė užduotis studijų dalyko "Interneto technologijos ir GIS".
-        <br> Sukūrimo data: 2025 m. gegužės 30 d.
-        <br> Kontaktai: <a href="mailto:laura.petkevic@chgf.stud.vu.lt">laura.petkevic@chgf.vu.lt</a> | <a href="https://github.com/LAURAPETGEO" target="_blank">laurapetgeo.github.io</a>
-    </div>
-
-    <script src="index.js" type="text/javascript"></script>
-</body>
-</html>
+            <iframe src="3_praktinis/index.html
