--- a/index.html
+++ b/index.html
@@ -56,10 +56,10 @@
             <h1>Mano Darbai Apžvalga</h1>
             <p>Šiame skyriuje rasite mano atliktų žemėlapių projektų vizualinę apžvalgą. Kiekviena nuotrauka yra ekrano kopija arba vizualizacija, susijusi su konkrečiu projektu. Paspauskite ant nuotraukos, kad ją padidintumėte ir pamatytumėte detaliau.</p>
             <div id="photos">
-                <img onclick="magnify(<span class="math-inline">\(this\)\.attr\('src'\)\)" src\="images/map\_1\_preview\.png" alt\="Kepler\.gl tornadų ir prieglaudų žemėlapio peržiūra"\>
-<img onclick\="magnify\(</span>(this).attr('src'))" src="images/map_2_preview.png" alt="Žemės drebėjimų 3D žemėlapio peržiūra">
-                <img onclick="magnify(<span class="math-inline">\(this\)\.attr\('src'\)\)" src\="images/map\_3\_preview\.png" alt\="Tornadų intensyvumo gardelės žemėlapio peržiūra"\>
-<img onclick\="magnify\(</span>(this).attr('src'))" src="images/map_4_preview.png" alt="Eismo įvykių analizės žemėlapio peržiūra">
+                <img onclick="magnify($(this).attr('src'))" src="images/map_1_preview.png" alt="Kepler.gl tornadų ir prieglaudų žemėlapio peržiūra">
+                <img onclick="magnify($(this).attr('src'))" src="images/map_2_preview.png" alt="Žemės drebėjimų 3D žemėlapio peržiūra">
+                <img onclick="magnify($(this).attr('src'))" src="images/map_3_preview.png" alt="Tornadų intensyvumo gardelės žemėlapio peržiūra">
+                <img onclick="magnify($(this).attr('src'))" src="images/map_4_preview.png" alt="Eismo įvykių analizės žemėlapio peržiūra">
                 <img onclick="magnify($(this).attr('src'))" src="images/map_5_preview.png" alt="Aplinkos švaros pasiūlymų žemėlapio peržiūra">
             </div>
         </div>
@@ -116,4 +116,18 @@
                 <li>Naudotis žemėlapio funkcijomis – keisti foninius žemėlapius, atlikti paiešką ir pan.;</li>
             </ul>
             <p class="small-text">Visi naudotojo pateikti objektai automatiškai įgyja pradinę būseną „Pateiktas“ ir yra matomi tik vidaus peržiūros versijoje. Tik administratoriaus patvirtinti ar analizuojami objektai tampa matomi viešame žemėlapyje.</p>
-            <iframe src="3_praktinis/index.html
+            <iframe src="3_praktinis/index.html" width="100%" height="600px" frameborder="0" allowfullscreen></iframe>
+        </div>
+    </div>
+
+
+    <div id="footer">
+        Autorius : Laura Petkevič <br> Vilniaus Universitetas, Kartografijos ir GIS
+        <br> Svetainė parengta kaip 4-oji praktinė užduotis studijų dalyko "Interneto technologijos ir GIS".
+        <br> Sukūrimo data: 2025 m. gegužės 30 d.
+        <br> Kontaktai: <a href="mailto:laura.petkevic@chgf.stud.vu.lt">laura.petkevic@chgf.stud.vu.lt</a> | <a href="https://github.com/LAURAPETGEO" target="_blank">laurapetgeo.github.io</a>
+    </div>
+
+    <script src="index.js" type="text/javascript"></script>
+</body>
+</html>
