--- a/index.html
+++ b/index.html
@@ -56,11 +56,11 @@
             <h1>Mano Darbai Apžvalga</h1>
             <p>Šiame skyriuje rasite mano atliktų žemėlapių projektų vizualinę apžvalgą. Kiekviena nuotrauka yra ekrano kopija arba vizualizacija, susijusi su konkrečiu projektu. Paspauskite ant nuotraukos, kad ją padidintumėte ir pamatytumėte detaliau.</p>
             <div id="photos">
-                <img onclick="magnify($(this).attr('src'))" src="images/map_1_preview.png" alt="Kepler.gl tornadų ir prieglaudų žemėlapio peržiūra">
-                <img onclick="magnify($(this).attr('src'))" src="images/map_2_preview.png" alt="Žemės drebėjimų 3D žemėlapio peržiūra">
-                <img onclick="magnify($(this).attr('src'))" src="images/map_3_preview.png" alt="Tornadų intensyvumo gardelės žemėlapio peržiūra">
-                <img onclick="magnify($(this).attr('src'))" src="images/map_4_preview.png" alt="Eismo įvykių analizės žemėlapio peržiūra">
-                <img onclick="magnify($(this).attr('src'))" src="images/map_5_preview.png" alt="Aplinkos švaros pasiūlymų žemėlapio peržiūra">
+                <img onclick="magnify($(this).attr('src'))" src="img/images/map_1_preview.png" alt="Kepler.gl tornadų ir prieglaudų žemėlapio peržiūra">
+                <img onclick="magnify($(this).attr('src'))" src="img/images/map_2_preview.png" alt="Žemės drebėjimų 3D žemėlapio peržiūra">
+                <img onclick="magnify($(this).attr('src'))" src="img/images/map_3_preview.png" alt="Tornadų intensyvumo gardelės žemėlapio peržiūra">
+                <img onclick="magnify($(this).attr('src'))" src="img/images/map_4_preview.png" alt="Eismo įvykių analizės žemėlapio peržiūra">
+                <img onclick="magnify($(this).attr('src'))" src="img/images/map_5_preview.png" alt="Aplinkos švaros pasiūlymų žemėlapio peržiūra">
             </div>
         </div>
 
