--- a/index.html
+++ b/index.html
@@ -53,16 +53,30 @@
 
     <div id="info-sections">
         <div id="work">
-            <h1>Mano Darbai Apžvalga</h1>
+            <h1>Mano Darbai-Apžvalga</h1>
             <p>Šiame skyriuje rasite mano atliktų žemėlapių projektų vizualinę apžvalgą. Kiekviena nuotrauka yra ekrano kopija arba vizualizacija, susijusi su konkrečiu projektu. Paspauskite ant nuotraukos, kad ją padidintumėte ir pamatytumėte detaliau.</p>
             <div id="photos">
-                <img onclick="magnify($(this).attr('src'))" src="img/images/map_1_preview.png" alt="Kepler.gl tornadų ir prieglaudų žemėlapio peržiūra">
-                <img onclick="magnify($(this).attr('src'))" src="img/images/map_2_preview.png" alt="Žemės drebėjimų 3D žemėlapio peržiūra">
-                <img onclick="magnify($(this).attr('src'))" src="img/images/map_3_preview.png" alt="Tornadų intensyvumo gardelės žemėlapio peržiūra">
-                <img onclick="magnify($(this).attr('src'))" src="img/images/map_4_preview.png" alt="Eismo įvykių analizės žemėlapio peržiūra">
-                <img onclick="magnify($(this).attr('src'))" src="img/images/map_5_preview.png" alt="Aplinkos švaros pasiūlymų žemėlapio peržiūra">
-            </div>
-        </div>
+    <div class="photo-item">
+        <img onclick="magnify($(this).attr('src'))" src="img/map_1_preview.png" alt="Kepler.gl tornadų ir prieglaudų žemėlapio peržiūra">
+        <p class="photo-title">Tornadų ir Prieglaudų Žemėlapis</p>
+    </div>
+    <div class="photo-item">
+        <img onclick="magnify($(this).attr('src'))" src="img/map_2_preview.png" alt="Žemės drebėjimų 3D žemėlapio peržiūra">
+        <p class="photo-title">Žemės Drebėjimų 3D Žemėlapis</p>
+    </div>
+    <div class="photo-item">
+        <img onclick="magnify($(this).attr('src'))" src="img/map_3_preview.png" alt="Tornadų intensyvumo gardelės žemėlapio peržiūra">
+        <p class="photo-title">Tornadų Intensyvumo Gardelės</p>
+    </div>
+    <div class="photo-item">
+        <img onclick="magnify($(this).attr('src'))" src="img/map_4_preview.png" alt="Eismo įvykių analizės žemėlapis">
+        <p class="photo-title">Eismo Įvykių Analizė</p>
+    </div>
+    <div class="photo-item">
+        <img onclick="magnify($(this).attr('src'))" src="img/map_5_preview.png" alt="Aplinkos švaros pasiūlymų žemėlapis">
+        <p class="photo-title">Aplinkos Švaros Pasiūlymai</p>
+    </div>
+</div>
 
         <div id="bio">
             <h1>Apie Mane ir Studijas</h1>
