--- a/index.html
+++ b/index.html
@@ -80,34 +80,34 @@
 
         <div id="bio">
             <h1>Apie Mane ir Studijas</h1>
-            <p>Esu Vilniaus universiteto studentė, aistringai besidominti kartografija, geoinformacinėmis sistemomis (GIS) ir interneto technologijų taikymu geografijoje. Studijų metu įgijau teorinių žinių ir praktinių įgūdžių dirbant su įvairiomis geoinformacinėmis platformomis, tokiomis kaip ArcGIS Pro, QGIS, ArcGIS Online, Geoportal.lt, ir įrankiais, kaip Kepler.gl. Taip pat mokausi ir taikau programavimo kalbas bei žiniatinklio kūrimo technologijas, skirtas interaktyvių žemėlapių ir erdvinės duomenų vizualizacijų kūrimui.</p>
+            <p>Esu Vilniaus universiteto studentė, aistringai besidominti kartografija ir GIS, ir interneto technologijų taikymu geografijoje. Studijų metu įgijau teorinių žinių ir praktinių įgūdžių dirbant su įvairiomis geoinformacinėmis platformomis, tokiomis kaip ArcGIS Pro, QGIS, ArcGIS Online, Geoportal.lt, ir įrankiais, kaip Kepler.gl. Taip pat mokausi ir taikau programavimo kalbas bei žiniatinklio kūrimo technologijas, skirtas interaktyvių žemėlapių ir erdvinės duomenų vizualizacijų kūrimui.</p>
             <p>Ši svetainė yra mano asmeninis portfolio, atspindintis mano mokymosi kelionę, praktinius gebėjimus ir gebėjimą integruoti skirtingas GIS technologijas. Tikiuosi, kad mano darbai padės jums geriau suprasti geografinių duomenų svarbą ir jų panaudojimo galimybes įvairiose srityse.</p>
         </div>
     </div>
 
     <div id="maps-section">
-        <h1>Mano Žemėlapiai Detaliau</h1>
+        <h1>Mano Žemėlapiai - Detaliau</h1>
         <p>Žemiau pateikiami interaktyvūs žemėlapiai, sukurti per studijų dalyko "Interneto technologijos ir GIS" praktinius užsiėmimus. Kiekvienas žemėlapis iliustruoja skirtingas duomenų vizualizavimo, analizės ir interaktyvumo galimybes.</p>
 
         <div class="map-container">
-            <h2>1. Kepler.gl Žemėlapiai (1-oji praktinė užduotis)</h2>
+            <h2>1. Kepler.gl Žemėlapiai</h2>
             <p>Šie trys žemėlapiai sukurti naudojant Kepler.gl platformą ir sudaro pirmąją praktinę užduotį. Jie demonstruoja skirtingas JAV tornadų ir žemės drebėjimų duomenų vizualizavimo galimybes, įskaitant interaktyvius filtrus ir 3D atvaizdavimą.</p>
 
             <h3>1.1 Tornadų Trajektorijos ir Evakuacijos Prieglaudos JAV</h3>
-            <p>Šis žemėlapis analizuoja ir vizualizuoja JAV tornadų trajektorijas (nuo 1950 iki 2021 m.) bei evakuacijos pagalbos prieglaudas JAV. Tornadų sluoksnis rodo jų intensyvumą (F-skalė), žuvusiųjų ir sužeistųjų skaičių. Prieglaudų sluoksnyje pateikiama informacija apie pavadinimą, adresą, miestą, telefono numerį ir veikimo statusą. Naudotojai gali filtruoti tornadus pagal norimą dešimties metų periodą, siekiant pamatyti, kaip šalis prisitaiko prie šių gamtos reiškinių dažnumo ir kaip pagalbos infrastruktūra yra išdėstyta.</p>
+            <p>Šis žemėlapis analizuoja ir vizualizuoja JAV tornadų trajektorijas (nuo 1950 iki 2021 m.) bei evakuacijos pagalbos prieglaudas JAV. Tornadų sluoksnis rodo jų intensyvumą, žuvusiųjų ir sužeistųjų skaičių. Prieglaudų sluoksnyje pateikiama informacija apie pavadinimą, adresą, miestą, telefono numerį ir veikimo statusą. Naudotojai gali filtruoti tornadus pagal norimą dešimties metų periodą, siekiant pamatyti, kaip šalis prisitaiko prie šių gamtos reiškinių dažnumo ir kaip pagalbos infrastruktūra yra išdėstyta.</p>
             <iframe src="1_praktinis/map_1.html" width="100%" height="600px" frameborder="0" allowfullscreen></iframe>
 
-            <h3>1.2 Istoriniai Žemės Drebėjimai Kalifornijoje (Gardelės vaizdavimas)</h3>
+            <h3>1.2 Istoriniai Žemės Drebėjimai Kalifornijoje </h3>
             <p>Šis žemėlapis vaizduoja istorinius žemės drebėjimus Kalifornijoje (Gardelė). Duomenys atvaizduojami 3D formatu pagal žemės drebėjimų magnitudę, o taip pat integruota erdvinė gardelė pagal magnitudę ir laiko skalę, leidžiančią stebėti drebėjimų dinamiką.</p>
             <iframe src="1_praktinis/map_2.html" width="100%" height="600px" frameborder="0" allowfullscreen></iframe>
 
-            <h3>1.3 Tornadų Intensyvumas (Gardelės vaizdavimas)</h3>
+            <h3>1.3 Tornadų Intensyvumas </h3>
             <p>Šis žemėlapis – "Tornadų intensyvumas nuo 1950 iki 2021 m.", atvaizduojamas gardelėmis pagal tornadų vienetus. Ši vizualizacija leidžia lengvai nustatyti, kuriose vietose ir kokiu laikotarpiu buvo didžiausias tornadų skaičius. Naudotojai gali pasirinkti dominatį laikotarpį per filtrus.</p>
             <iframe src="1_praktinis/map_3.html" width="100%" height="600px" frameborder="0" allowfullscreen></iframe>
         </div>
 
         <div class="map-container">
-            <h2>2. Geoportal.lt Žemėlapis: Eismo Įvykių Analizė Prie Mokyklų Lietuvos Savivaldybėse (2023 m.)</h2>
+            <h2>2. Geoportal.lt Žemėlapis: Eismo Įvykių Analizė Prie Mokyklų - Lietuvos Savivaldybėse (2023 m.)</h2>
             <p>Šis interaktyvus žemėlapis pateikia 2023 m. eismo įvykių analizę Lietuvos teritorijoje, ypatingą dėmesį skiriant švietimo įstaigų aplinkai. Žemėlapis skirtas analizuoti eismo saugą šalia mokyklų, identifikuoti rizikingas teritorijas ir remtis sprendimų priėmime švietimo, kelių infrastruktūros bei viešojo saugumo srityse.</p>
             <p>Integruoti sluoksniai:</p>
             <ul>
@@ -138,8 +138,8 @@
     <div id="footer">
         Autorius : Laura Petkevič <br> Vilniaus Universitetas, Kartografijos ir GIS
         <br> Svetainė parengta kaip 4-oji praktinė užduotis studijų dalyko "Interneto technologijos ir GIS".
-        <br> Sukūrimo data: 2025 m. gegužės 30 d.
-        <br> Kontaktai: <a href="mailto:laura.petkevic@chgf.stud.vu.lt">laura.petkevic@chgf.stud.vu.lt</a> | <a href="https://github.com/LAURAPETGEO" target="_blank">laurapetgeo.github.io</a>
+        <br> Sukūrimo data: 2025 m. gegužės 29 d.
+        <br> Kontaktai: <a href="mailto:laura.petkevic@chgf.stud.vu.lt">laura.petkevic@chgf.stud.vu.lt</a> | <a href="https://github.com/LAURAPETGEO" target="_blank">laurapetGeo</a>
     </div>
 
     <script src="index.js" type="text/javascript"></script>
