--- a/pages/contact.html
+++ b/pages/contact.html
@@ -149,7 +149,7 @@
         <p>Vilniaus universiteto, Kartografijos ir GIS III kurso studentė.</p>
         <p>Ši svetainė yra studentės atlikta 4-oji praktinė užduotis studijų dalyko "Interneto technologijos ir GIS", skirta pademonstruoti gebėjimus dirbti su HTML, CSS ir integruoti interaktyvius žemėlapius.</p>
         <p>El. paštas: <a href="mailto:laura.petkevic@chgf.stud.vu.lt">laura.petkevic@chgf.stud.vu.lt</a></p>
-        <p>GitHub: <a href="https://github.com/LAURAPETGEO" target="_blank">laurapetgeo.github.io</a></p>
+        <p>GitHub: <a href="https://github.com/LAURAPETGEO" target="_blank">laurapetGeo</a></p>
     </div>
 
     <div class="form-container">
@@ -173,7 +173,7 @@
         Autorius : Laura Petkevič <br> Vilniaus Universitetas, Kartografijos ir GIS
         <br> Svetainė parengta kaip 4-oji praktinė užduotis studijų dalyko "Interneto technologijos ir GIS".
         <br> Sukūrimo data: 2025 m. gegužės 30 d.
-        <br> Kontaktai: <a href="mailto:laura.petkevic@chgf.stud.vu.lt">laura.petkevic@chgf.stud.vu.lt</a> | <a href="https://github.com/LAURAPETGEO" target="_blank">laurapetgeo.github.io</a>
+        <br> Kontaktai: <a href="mailto:laura.petkevic@chgf.stud.vu.lt">laura.petkevic@chgf.stud.vu.lt</a> | <a href="https://github.com/LAURAPETGEO" target="_blank">laurapetGeo</a>
     </div>
 
 </body>
